--- a/README
+++ b/README
@@ -2,7 +2,7 @@ This is a Xen xm command completion script. You can append it to your .bashrc or
 to make it effect.
 
 
-If you prefer to use xm's original function, just type: export XENXM=off on your bash.
+If you prefer to use xm's original function, just type: export XENXM=off on your bash. (another optional value: on)
 
 
 I have another idea to speed the function _xm():
