--- a/README
+++ b/README
@@ -6,7 +6,7 @@ If you prefer to use xm's original function, just type: export XENXM=off on your
 
 
 I have another idea to speed the function _xm():
-Make a cache to store domain's detail information. Then when you <TAB> function _xm() will
+Make a cache to store domain's detail information when create or destroy a domain. Then when you <TAB> function _xm() will
 search info from the cache, not execute shell command to obtion the info. such as (hot plug
 device number)
 
